--- a/app/src/main/res/layout/fragment_pool.xml
+++ b/app/src/main/res/layout/fragment_pool.xml
@@ -63,10 +63,11 @@
 
     <ImageButton
         android:id="@+id/btn_current_location"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="95dp"
+        android:src = "@drawable/ic_current"
         app:layout_constraintBottom_toTopOf="@+id/btn_match"
         app:layout_constraintEnd_toEndOf="parent"
         app:srcCompat="@color/bg_login_button" />
