--- a/app/src/main/res/layout/fragment_pool.xml
+++ b/app/src/main/res/layout/fragment_pool.xml
@@ -12,7 +12,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:layout_marginBottom="3dp"
+        android:layout_marginBottom="8dp"
         android:text="출발지"
         app:layout_constraintBottom_toTopOf="@+id/start_tv"
         app:layout_constraintStart_toStartOf="parent" />
@@ -20,11 +20,11 @@
     <TextView
         android:id="@+id/start_tv"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:layout_marginStart="8dp"
         android:layout_marginBottom="8dp"
-        android:text="default"
-        android:textSize="30dp"
+        android:text="터치해서 설정하세요"
+        android:textAppearance="@style/TextAppearance.AppCompat"
         app:layout_constraintBottom_toTopOf="@+id/textView4"
         app:layout_constraintStart_toStartOf="parent" />
 
@@ -33,7 +33,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:layout_marginBottom="3dp"
+        android:layout_marginBottom="8dp"
         android:text="도착지"
         app:layout_constraintBottom_toTopOf="@+id/dest_tv"
         app:layout_constraintStart_toStartOf="parent" />
@@ -41,11 +41,11 @@
     <TextView
         android:id="@+id/dest_tv"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:layout_marginStart="8dp"
-        android:layout_marginBottom="8dp"
+        android:layout_marginBottom="10dp"
         android:text="터치해서 설정하세요"
-        android:textSize="30dp"
+        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
         app:layout_constraintBottom_toTopOf="@+id/btn_match"
         app:layout_constraintStart_toStartOf="parent" />
 
@@ -66,8 +66,9 @@
         android:layout_width="30dp"
         android:layout_height="30dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginBottom="95dp"
-        android:src = "@drawable/ic_current"
+        android:layout_marginBottom="70dp"
+        android:background="@null"
+        android:src="@drawable/ic_current"
         app:layout_constraintBottom_toTopOf="@+id/btn_match"
         app:layout_constraintEnd_toEndOf="parent"
         app:srcCompat="@color/bg_login_button" />
@@ -76,8 +77,8 @@
         android:id="@+id/mapView"
         android:layout_width="wrap_content"
         android:layout_height="0dp"
-        android:layout_marginBottom="100dp"
-        app:layout_constraintBottom_toTopOf="@+id/dest_tv"
+        android:layout_marginBottom="10dp"
+        app:layout_constraintBottom_toTopOf="@+id/textView2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
