--- a/app/src/main/res/layout/fragment_alrm.xml
+++ b/app/src/main/res/layout/fragment_alrm.xml
@@ -12,7 +12,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
         android:layout_marginTop="10dp"
-        android:text="날씨"
+        android:text="날짜"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
