--- a/app/src/main/res/layout/fragment_pool.xml
+++ b/app/src/main/res/layout/fragment_pool.xml
@@ -61,17 +61,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
-    <ImageButton
-        android:id="@+id/btn_current_location"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="70dp"
-        android:background="@null"
-        android:src="@drawable/ic_current"
-        app:layout_constraintBottom_toTopOf="@+id/btn_match"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:srcCompat="@color/bg_login_button" />
+
 
     <com.google.android.gms.maps.MapView
         android:id="@+id/mapView"
@@ -82,5 +72,25 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+    <android.support.design.widget.CoordinatorLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+        <ImageButton
+            android:id="@+id/btn_current_location"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginBottom="70dp"
+            android:src="@drawable/ic_current"
+            app:layout_constraintBottom_toTopOf="@+id/btn_match"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:srcCompat="@color/bg_login_button"
+            android:layout_gravity="top|end"
+            android:layout_margin="10dp"
+            android:background="#00000000"
+
+            />
+
+    </android.support.design.widget.CoordinatorLayout>
 
 </android.support.constraint.ConstraintLayout>
