--- a/app/src/main/res/layout/activitiy_login.xml
+++ b/app/src/main/res/layout/activitiy_login.xml
@@ -57,9 +57,10 @@
 
         <ImageButton
             android:id="@+id/imageButton_login"
-            android:layout_width="0dp"
+            android:layout_width="115dp"
             android:layout_height="50dp"
             android:layout_marginStart="10dp"
+            android:layout_marginTop="15dp"
             android:layout_marginEnd="5dp"
             android:layout_marginBottom="15dp"
             android:background="@null"
@@ -67,13 +68,16 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/imageButton_signup"
             app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/login_pw"
             tools:srcCompat="@tools:sample/avatars" />
 
         <EditText
             android:id="@+id/login_id"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginEnd="20dp"
             android:ems="10"
             android:hint="ID"
             android:inputType="text"
@@ -83,9 +87,11 @@
 
         <EditText
             android:id="@+id/login_pw"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginStart="20dp"
             android:layout_marginTop="10dp"
+            android:layout_marginEnd="20dp"
             android:ems="10"
             android:hint="Password"
             android:inputType="textPassword"
@@ -95,9 +101,10 @@
 
         <ImageButton
             android:id="@+id/imageButton_signup"
-            android:layout_width="0dp"
+            android:layout_width="115dp"
             android:layout_height="50dp"
             android:layout_marginStart="5dp"
+            android:layout_marginTop="15dp"
             android:layout_marginEnd="10dp"
             android:layout_marginBottom="15dp"
             android:background="@null"
@@ -105,6 +112,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/imageButton_login"
+            app:layout_constraintTop_toBottomOf="@+id/login_pw"
             tools:srcCompat="@tools:sample/avatars" />
     </android.support.constraint.ConstraintLayout>
 
