--- a/app/src/main/res/layout/fragment_pool.xml
+++ b/app/src/main/res/layout/fragment_pool.xml
@@ -65,12 +65,14 @@
         android:id="@+id/btn_current_location"
         android:layout_width="30dp"
         android:layout_height="30dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="70dp"
+        android:layout_marginTop="15dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginBottom="75dp"
         android:background="@null"
         android:src="@drawable/ic_current"
         app:layout_constraintBottom_toTopOf="@+id/btn_match"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/mapView"
         app:srcCompat="@color/bg_login_button" />
 
     <com.google.android.gms.maps.MapView
