--- a/app/src/main/res/layout/activity_passenger_match_success.xml
+++ b/app/src/main/res/layout/activity_passenger_match_success.xml
@@ -112,6 +112,7 @@
             android:text="TextView"
             android:textColor="@android:color/black"
             android:textSize="20dp"
+            app:layout_constraintStart_toStartOf="@+id/textView22"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView22" />
 
