--- a/app/src/main/res/layout/fragment_pool.xml
+++ b/app/src/main/res/layout/fragment_pool.xml
@@ -70,22 +70,28 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
     <android.support.design.widget.CoordinatorLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
         <ImageButton
             android:id="@+id/btn_current_location"
             android:layout_width="30dp"
             android:layout_height="30dp"
+            android:layout_gravity="top|end"
+            android:layout_margin="10dp"
             android:layout_marginEnd="8dp"
             android:layout_marginBottom="70dp"
+            android:background="#00000000"
             android:src="@drawable/ic_current"
             app:layout_constraintBottom_toTopOf="@+id/btn_match"
             app:layout_constraintEnd_toEndOf="parent"
             app:srcCompat="@color/bg_login_button"
-            android:layout_gravity="top|end"
-            android:layout_margin="10dp"
-            android:background="#00000000"
 
             />
 
